tests/ui/internal_entity.stderr
error[E0603]: struct `EntityAllocator` is private
 --> tests/ui/internal_entity.rs:1:21
  |
1 | use moirai::entity::EntityAllocator;
  |                     ^^^^^^^^^^^^^^^ private struct
  |
note: the struct `EntityAllocator` is defined here
 --> src/entity/mod.rs
  |
  | pub(crate) use allocator::{AllocatorError, EntityAllocator};
  |                                            ^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_entity.rs:1:37
  |
1 | use moirai::entity::EntityAllocator;
  |                                     ^ consider adding a `main` function to `$DIR/tests/ui/internal_entity.rs`
